export enum Component {
    Node,
    Level,
    Ram,
    Core
}