@startuml

interface HacknetPort
class HacknetNsAdapter
class LogNsAdapter

hexagon Hacknet #Business {

    class Manager {
        -farm
        +kill()
        +setupInfra()
        +deploy()
        +activate()
        +operate()
        -identifyCheapestComponentToUpgrade()
        -waitToHaveEnoughMoney()
        -upgradeHacknetFarm()
        -getEtaBeforeNextUpgrade()
        -waitUntilNextUpgrade()
    }

    class Farm {
        +MAX_NODE_COUNT
        +getNodeCount()
        +getNewNodeCost()
        +getNodeList()
        +getProductionRate()
        +buyNewNode()
    }

    class Node {
        +id: int
        -MAX_LEVEL: int
        -MAX_RAM: int
        -MAX_CORES: int
        --getter--
        +getLevel()
        +getRam()
        +getCores()
        +getLevelUpgradeCost()
        +getRamUpgradeCost()
        +getCoreUpgradeCost()
        +getProductionRate()
        --
        +getComponentLevel()
        +getUpgradeCost()
        +upgrade()
        -upgradeLevel()
        -upgradeRam()
        -upgradeCore()
    }

    enum Component {
        Node
        Level
        Ram
        Cores
    }
}

' Driven by
    HacknetPort --> Manager

' Hexagon
    Manager -d-> Farm
    Manager --> Component
    Farm --> Node
    Node -u-> Component

' Driver
    Manager -r-> HacknetNsAdapter
    Manager -l-> LogNsAdapter
    Farm -u-> HacknetNsAdapter
    Farm -u-> LogNsAdapter
    Node -u-> HacknetNsAdapter
    Node -u-> LogNsAdapter

@enduml